<?xml version="1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:orientation = "vertical"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent" >

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textView"
            android:gravity="center_vertical|right"
            android:padding="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number1"
                android:id="@+id/button1"
                android:layout_weight = "1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number2"
                android:id="@+id/button2"
                android:layout_weight = "1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number3"
                android:id="@+id/button3"
                android:layout_weight = "1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number4"
            android:id="@+id/button4"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number5"
            android:id="@+id/button5"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number6"
            android:id="@+id/button6"
            android:layout_weight = "1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number7"
            android:id="@+id/button7"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number8"
            android:id="@+id/button8"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number9"
            android:id="@+id/button9"
            android:layout_weight = "1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/number0"
            android:id="@+id/button0"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/opSub"
            android:id="@+id/buttonSub"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/opAdd"
            android:id="@+id/buttonAdd"
            android:layout_weight = "1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/opMul"
            android:id="@+id/buttonMul"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/opDiv"
            android:id="@+id/buttonDiv"
            android:layout_weight = "1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/opRes"
            android:id="@+id/buttonRes"
            android:layout_weight = "1"/>
    </LinearLayout>

</LinearLayout>
